--- a/src/app/modules/comments/comments.component.scss
+++ b/src/app/modules/comments/comments.component.scss
@@ -180,9 +180,9 @@
         padding: 16px 42px;
         color: #1C1C1C;
     font-family: League Spartan;
-    font-size: 17px;
+    font-size: 16px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: normal;
         
         }
@@ -638,6 +638,7 @@ font-weight: 400;
 }
 ul {
     list-style: none;
+    margin-top: 20px;
   }
 
   .kkcmdtx2{
