--- a/src/app/modules/job-details/job-details.component.html
+++ b/src/app/modules/job-details/job-details.component.html
@@ -82,8 +82,8 @@
           <div class="container kkdivjbr2">
             <p class="kkabtclt">About client</p>
             <!-- <p class="rate"><img class="fivestar" src="../assets/5star.png">&nbsp;&nbsp;4.9/5(124 Ratings)</p> -->
-            <p class="pver"><img src="../assets/startick.png">&nbsp;Profile verified</p>
-            <p class="pver pver1"><img src="../assets/startick.png">&nbsp;Payment verified</p>
+            <p class="pver"><img src="../assets/startick.png" style="width: 20px;margin-top: -4px;">&nbsp;Profile verified</p>
+            <p class="pver pver1"><img src="../assets/startick.png" style="width: 20px;margin-top: -4px;">&nbsp;Payment verified</p>
             <!-- <p class="tver">200+ verified Payments</p> -->
 
           </div>
