--- a/src/app/modules/setup-profile/setup-profile.component.html
+++ b/src/app/modules/setup-profile/setup-profile.component.html
@@ -92,11 +92,11 @@
             </div>
             <p class="kkbnktx6">Add Payment Option</p>
             <div class="kkbillpay1" data-bs-toggle="modal" data-bs-target="#upiModal"><span><img
-                  src="./assets/upi.png"></span>UPI</div>
+                  src="./assets/upi.png" style="width: 20px;"></span>UPI</div>
             <div class="kkbillpay1" data-bs-toggle="modal" data-bs-target="#exampleModal1"><span><img
-                  src="./assets/creditcard.png"></span>Credit Or Debit Card</div>
+                  src="./assets/creditcard.png" style="width: 20px;"></span>Credit Or Debit Card</div>
             <div class="kkbillpay1" data-bs-toggle="modal" data-bs-target="#bankModal "><span><img
-                  src="./assets/bank.png"></span>Bank Details</div>
+                  src="./assets/bank.png" style="width: 20px;"></span>Bank Details</div>
             <button class="btn kkbillbtnlst">Confirm Payment Method</button>
           </div>
         </div>
@@ -426,7 +426,7 @@
       </div>
       <div class="kkbpaycrd pt-4" *ngIf="UserData[0].role === 'author'">
         <ul>
-          <li class="profilesettinginfo" routerLink="/profile/employment-history">Change Personal Details</li>
+          <li class="profilesettinginfo" routerLink="/profile/author-profile">Change Personal Details</li>
           <li class="profilesettinginfo" routerLink="/profile/banking-details">Change your banking details</li>
           <li class="profilesettinginfo" routerLink="/profile/authors-idverify">Change your Govt.ID</li>
         </ul>
@@ -552,9 +552,9 @@
         </div>
         <p class="kkbnktx6">Withdraw Option</p>
         <div class="kkbillpay1" data-bs-toggle="modal" data-bs-target="#upiModal"><span><img
-              src="./assets/upi.png"></span>UPI</div>
+              src="./assets/upi.png" style="width:20px;"></span>UPI</div>
         <div class="kkbillpay1" data-bs-toggle="modal" data-bs-target="#bankModal "><span><img
-              src="./assets/bank.png"></span>Bank Details</div>
+              src="./assets/bank.png" style="width:20px;"></span>Bank Details</div>
         <button class="btn kkbillbtnlst">Confirm Payment Method</button>
       </div>
     </div>
