--- a/src/app/modules/author-nav/author-nav.component.html
+++ b/src/app/modules/author-nav/author-nav.component.html
@@ -63,14 +63,24 @@
   <div class="prset " *ngIf="hide" (click)="hidden()">
   <div class="kkcrd12">
     <div class="kkcrd text-center" (click)="$event.stopPropagation()">
-      <div class="kkprimg" *ngIf="User[0].profileUrl">
-        <img src="{{  User[0].profileUrl }}" class="rounded-circle kkprimg img-responsive">
+          <div  *ngIf="User[0].profileUrl" class="kkprimg" style="position: relative; display: inline-block;">
+            <img src="{{ User[0].profileUrl }}" class="rounded-circle kkprimg img-responsive">
+            <span class="material-symbols-outlined" routerLink="/profile/choose-your-picutre-now"  style="position: absolute;
+            margin-top: 58px;
+            right: -7px;
+            font-size: 20px;
+            color: #a426d1;
+            cursor: pointer;      
+           ">
+              edit
+            </span>
+      
     </div>
     <div class="kkprimg" *ngIf="!User[0].profileUrl">
         <img src="../assets/Frame 82.png" class="rounded-circle kkprimg img-responsive">
     </div>
         <div class="kkpname">
-            <p class="kkprname">{{User[0].firstName}} <img  *ngIf="calculateTotal() === 100" src="../assets/Verified Check_.png" alt="pubkins" style="margin-top: -6px;"> </p>
+            <p class="kkprname">{{User[0].firstName}} <img  *ngIf="calculateTotal() === 100" src="../assets/Verified Check_.png" alt="pubkins" style="width:15px; margin-top: -6px;"> </p>
             <p class="kkprname1">Author</p>
             <p class="kkprbtn1" routerLink="/setting/wallet"><span class="material-symbols-outlined kknavicon">
               account_balance_wallet
