--- a/src/app/modules/authprofile/authprofile.component.scss
+++ b/src/app/modules/authprofile/authprofile.component.scss
@@ -88,7 +88,8 @@ margin-top: 18px;
 .close { 
     float: right;
     margin-right: 18px;
-    margin-top: 20px;
+    margin-top: 20px;   
+    width: 14px;
 }
 
 .procont { 
