--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -211,8 +211,8 @@
 
 
 
-  <div class="">
-    <div class="container kklapdiv">
+  <div class="container-fluid kklapdiv">
+    <div class="container">
       <div class="row d-flex align-items-center">
         <div class="col-xl-7 col-lg-7">
           <div class="rrpubkinendalign1">
