--- a/src/app/modules/job-post/job-post.component.scss
+++ b/src/app/modules/job-post/job-post.component.scss
@@ -1,7 +1,7 @@
 .cat { 
     color: #7B7B7B;
 font-family: League Spartan;
-font-size: 18px;
+font-size: 16px;
 font-style: normal;
 font-weight: 400;
 margin-top: 11px;
@@ -11,26 +11,30 @@ line-height: 36px; /* 200% */
 .head{  
     color: #1C1C1C;
     font-family: League Spartan;
-    font-size: 40px;
+    font-size: 30px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: normal;
 }
+.rrlogoimg {
+    width: 100px;
+    margin-top: 10px;
+  }
 
 .card { 
     border-radius: 4px;
-background: #F2CFFF;
-display: flex;
-border : 0px;
-padding: 8px 29px 8px 29px;
-align-items: center;
-color: #292929;
-font-family: League Spartan;
-font-size: 18px;
-width: 310px;
-font-style: normal;
-font-weight: 600;
-line-height: 36px; /* 200% */
+    background: #F2CFFF;
+    display: flex;
+    border: 0px;
+    padding: 8px 29px 8px 29px;
+    align-items: center;
+    color: #292929;
+    font-family: League Spartan;
+    font-size: 16px;
+    width: 285px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;/* 200% */
 }
 
 .card.selected {
@@ -81,7 +85,7 @@ line-height: 36px; /* 200% */
     border: 0px;
     color: #FFF;
     font-family: League Spartan;
-    font-size: 20px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -97,7 +101,7 @@ border-radius: 4px;
 background: #F1C9FF;
 color: #A426D1;
 font-family: League Spartan;
-font-size: 20px;
+font-size: 18px;
 font-style: normal;
 margin-top: 28px;
 font-weight: 500;
@@ -152,7 +156,7 @@ line-height: normal;
 background: #E9ACFF;
 color: #2A2A2A;
 font-family: League Spartan;
-font-size: 20px;
+font-size: 16px;
 }
 
 .addsk1 { 
@@ -164,7 +168,7 @@ align-items: center;
 gap: 8px;
 color: #FFF;
 font-family: League Spartan;
-font-size: 20px;
+font-size: 16px;
 }
 
 .kkin1 { 
@@ -177,9 +181,9 @@ border-radius: 4px;
 border: 1px solid #A6A6A6;
 color: #000;
 font-family: League Spartan;
-font-size: 20px;
+font-size: 16px;
 font-style: normal;
-font-weight: 500;
+font-weight: 400;
 line-height: normal;
 }
 
@@ -194,9 +198,9 @@ line-height: normal;
     border: 1px solid #A6A6A6;
     color: #000;
     font-family: League Spartan;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: normal;
 }
 
@@ -204,9 +208,9 @@ line-height: normal;
 .com { 
     color: #2A2A2A;
     font-family: League Spartan;
-    font-size: 20px;
+    font-size: 18px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: normal;
     margin-top: 15px;
 }
@@ -221,7 +225,7 @@ line-height: normal;
 .com1 { 
     color: #2A2A2A;
     font-family: League Spartan;
-    font-size: 28px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 500;
 line-height: normal;
@@ -239,7 +243,7 @@ line-height: normal;
     border-bottom: 1px solid #979797;
     color: #2A2A2A;
     font-family: League Spartan;
-    font-size: 30px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -260,7 +264,7 @@ line-height: normal;
 .des { 
     width: 70%;
     height: 169px;
-    padding: 4px 9px 4px 22px;
+    padding: 10px 9px 4px 22px;
     flex-shrink: 0;
     border-radius: 10px;
     border: 2px solid #CFCFCF;
@@ -269,16 +273,16 @@ line-height: normal;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 36px;
+    line-height: 20px;
     margin-top: 11px;
 }
 
 .att { 
     color: #000;
 font-family: League Spartan;
-font-size: 29px;
+font-size: 25px;
 font-style: normal;
-font-weight: 600;
+font-weight: 400;
 margin-top: 28px;
 line-height: 36.5px; /* 125.862% */
 }
@@ -317,7 +321,7 @@ text-decoration-line: underline;
 .rate { 
     color: #000;
 font-family: League Spartan;
-font-size: 29px;
+font-size: 20px;
 margin-top: 42px;
 font-style: normal;
 font-weight: 500;
@@ -344,9 +348,9 @@ line-height: normal;
     border: 1px solid #A6A6A6;
     color: #000;
     font-family: League Spartan;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: normal;
     box-shadow: 4px 3px 13px 0 rgba(0, 0, 0, 0.2);
 }
@@ -354,7 +358,7 @@ line-height: normal;
 .hr{  
     color: #000;
 font-family: League Spartan;
-font-size: 22px;
+font-size: 20px;
 font-style: normal;
 font-weight: 500;
 line-height: normal;
@@ -366,7 +370,7 @@ margin-left: 20px;
     width: 47px;
     height: 40px;
     padding: 7px 11px;
-    font-size: 24px;
+    font-size: 20px;
     margin-top: 11px;
     flex-shrink: 0;
     border-radius: 4px;
@@ -378,7 +382,7 @@ margin-left: 20px;
 .hr1 { 
     color: #2A2A2A;
 font-family: League Spartan;
-font-size: 23px;
+font-size: 20px;
 font-style: normal;
 font-weight: 500;
 line-height: normal;
@@ -388,7 +392,7 @@ line-height: normal;
     margin-left: 702px;
     color: #7B7B7B;
     font-family: League Spartan;
-    font-size: 18px;
+    font-size: 16px;
     margin-top: 4px;
     font-weight: 500;
 }
@@ -490,17 +494,17 @@ line-height: normal;
 .jobheadreview{  
     color: #000;
 font-family: "League Spartan";
-font-size: 29px;
+font-size: 20px;
 font-style: normal;
-font-weight: 600;
+font-weight: 500;
 line-height: 36.5px; /* 125.862% */
 }
 
 .postreview { 
     color: #000;
 font-family: "League Spartan";
-font-size: 20px;
-margin-top: 20px;
+font-size: 18px;
+margin-top: 10px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
@@ -509,16 +513,16 @@ line-height: normal;
 .reviewdesc{ 
     color: #000;
     font-family: "League Spartan";
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 42px;
+    line-height: 25px;
 }
 
 .reviewskill { 
     color: #000;
 font-family: "League Spartan";
-font-size: 24px;
+font-size: 20px;
 font-style: normal;
 font-weight: 500;
 line-height: normal;
@@ -526,12 +530,12 @@ line-height: normal;
 
 .ratereviewjob{  
     color: #000;
-font-family: "League Spartan";
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-margin-left: 17px;
-line-height: 41px; /* 205% */
+    font-family: "League Spartan";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    margin-left: 17px;
+    line-height: 20px;
 }
 
 .reviewskilljob { 
@@ -544,7 +548,7 @@ border-radius: 154px;
 background: #FCF3FF;
 color: #1C1C1C;
 font-family: "League Spartan";
-font-size: 20px;
+font-size: 16px;
 font-style: normal;
 font-weight: 500;
 line-height: normal;
