--- a/src/app/modules/profiledetails/profiledetails.component.scss
+++ b/src/app/modules/profiledetails/profiledetails.component.scss
@@ -1,3 +1,68 @@
+//deleteModal
+
+.modal-content { 
+  width: 73%;
+}
+
+.deleteclosemodalbtn {
+  float: right;
+  background-color: white;
+  border: 0px;
+  /* width: 0px; */
+  position: absolute;
+  right: 9px;
+  margin-top: 8px;
+}
+
+.modal-paddingdelete {
+  padding: 23px;
+}
+
+.deleteLabel {
+  color: #000;
+  text-align: center;
+  font-family: "League Spartan";
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 36px;
+  margin-top: 10px;
+}
+
+.deleteimg {
+  width: 14px;
+  margin-top: 7px;
+}
+
+.backModalbtn,.confirmModalbtn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  border: 2px solid #e0e0e0;
+  font-family: "League Spartan";
+  font-size: 16px;  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+
+}
+
+.backModalbtn { 
+  background: #f9f9f9;
+  float: right;
+  margin-right: 24px;
+  color: #000;
+  padding: 10px 28px;
+}
+
+.confirmModalbtn { 
+  background: #A426D1;
+  color:  #fff;
+  border: 0px ;
+  padding: 11.5px 25px;}
+
+//Main
 .kkbtnexemp {
   margin-top: 37px;
 }
