Commit the changes 26-03

--- a/src/app/modules/forget-password/forget-password.component.scss
+++ b/src/app/modules/forget-password/forget-password.component.scss
@@ -10,6 +10,16 @@
 }
 
 
+.errormsg { 
+    color: #A426D1;
+font-family: League Spartan;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 36px;
+}
+
+
 .head {
     color: #1C1C1C;
     font-family: "League Spartan", sans-serif;
