--- a/src/app/modules/forget-password/forget-password.component.html
+++ b/src/app/modules/forget-password/forget-password.component.html
@@ -1,67 +1,91 @@
 <div class="container mt-3">
-    <div class="row">
-        <div class="col-3">
-            <img routerLink="/" src="../assets/Artboard 1 1.png" alt="Pubkin">
-        </div>
-        <div class="col-9">
-        </div>
+  <div class="row">
+    <div class="col-3">
+      <img routerLink="/" src="../assets/Artboard 1 1.png" alt="Pubkin" />
     </div>
+    <div class="col-9"></div>
+  </div>
 </div>
-
 
 <div *ngIf="!passshow">
-<form>
+  <form>
     <div class="text-center flx">
-
-        <div class="ecard">
-            <div class="fmt1">
-                <span class="emailforegtpass">
-                    outgoing_mail
-                </span>
-            </div>
-            <p class="head" style="margin-top: 32px;">Update Your Password</p>
-            <p class="forgetleft">Enter your Email address and select <span class="forgetleft2">Send Email.</span></p>
-            <p class="forgetleft1">Email</p>
-            <input type="email" class="int"  id="email" style="width:430px" placeholder="Email" id="email" name="email">
-            <div class="flx1">
-                <button class="btnfr1" type="submit"><span>Cancel</span></button>
-                <button class="btnfr2" type="submit" (click)="pasword1();sendOTP();"><span>Send Email</span></button>
-            </div>
+      <div class="ecard">
+        <div class="fmt1">
+          <span class="emailforegtpass"> outgoing_mail </span>
         </div>
+        <p class="head" style="margin-top: 32px">Update Your Password</p>
+        <p class="forgetleft">
+          Enter your Email address and select
+          <span class="forgetleft2">Send Email.</span>
+        </p>
+        <p class="forgetleft1">Email</p>
+        <form #emailVerify="ngForm">
+        <input
+          type="email"
+          class="int"
+          id="email"
+          style="width: 430px"
+          placeholder="Email"
+          ngModel
+          name="email" required
+          [(ngModel)]="email"
+        />
+        
+        <div class="errormsg" *ngIf="!emails.includes(email)">
+          * Email doesn't match
+        </div>
+
+        <div class="flx1">
+          <button class="btnfr1"  routerLink="/"><span>Cancel</span></button>
+          <button class="btnfr2" type="submit" (click)="pasword1(); sendOTP()" [disabled]="emailVerify.invalid ">
+            <span>Send Email</span>
+          </button>
+        </div>
+    </form>
+      </div>
     </div>
-</form>
+  </form>
 </div>
-<br>
+<br />
 
 <!-- forget password -->
 <div *ngIf="passshow">
-    <form #OTPForm="ngForm">
-        <div class="text-center flx">
-    
-            <div class="ecard">
-                <div class="fmt1">
-                    <span class="emailforegtpass">
-                        workspace_premium
-                    </span>
-                </div>
-                <p class="head" style="margin-top: 32px;">Verify You Email</p>
-                <p class="forgetleft">Enter your valid OTP and select <span class="forgetleft2">Confirm</span></p>
-                <p class="forgetleft1">OTP</p>
-                <input type="text" class="int"  id="otp_inp" ngModel required name="otpInput"
-                #otpInput="ngModel" style="width:430px" placeholder="OTP"  maxlength="4" minlength="1">
-                <div class="flx1">
-                    <button class="btnfr1" type="submit" (click)="pasword1();"><span>Cancel</span></button>
-                    <button class="btnfr2" type="submit" (click)="verifyOTP();"><span>Confirm</span></button>
-                </div>
-            </div>
+  <form #OTPForm="ngForm">
+    <div class="text-center flx">
+      <div class="ecard">
+        <div class="fmt1">
+          <span class="emailforegtpass"> workspace_premium </span>
         </div>
-    </form>
-
+        <p class="head" style="margin-top: 32px">Verify You Email</p>
+        <p class="forgetleft">
+          Enter your valid OTP and select
+          <span class="forgetleft2">Confirm</span>
+        </p>
+        <p class="forgetleft1">OTP</p>
+        <input
+          type="text"
+          class="int"
+          id="otp_inp"
+          ngModel
+          required
+          name="otpInput"
+          #otpInput="ngModel"
+          style="width: 430px"
+          placeholder="OTP"
+          maxlength="4"
+          minlength="1"
+        />
+        <div class="flx1">
+          <button class="btnfr1" type="submit" (click)="pasword1()">
+            <span>Cancel</span>
+          </button>
+          <button class="btnfr2" type="submit" (click)="verifyOTP()">
+            <span>Confirm</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </form>
 </div>
-
-
-
-
-<!-- <input type="email"  class="mailint" id="email" ><br> <button
-class="cemailbtn btn" (click)="sendOTP();">Confirm</button><br> -->
 
