--- a/src/app/modules/profiledetails/profiledetails.component.scss
+++ b/src/app/modules/profiledetails/profiledetails.component.scss
@@ -1117,9 +1117,9 @@ select {
     font-family: "League Spartan", sans-serif;
     font-size: 20px;
     font-style: normal;
-    padding-right: 20px;
+    padding-right: 46px;
     font-weight: 500;
-    line-height: 24px;
+    line-height: 24px;    margin-top: 17px;
     word-wrap: break-word;
   }
 
